namespace Utilities
{
    public static class Strings
    {
        public const string AtTheTop = "AtTheTop";
        public const string BuildAllSides = "BuildAllSides";
        public const string BuildTopOnly = "BuildTopOnly";
        public const string Healing = "Healing";
        public const string Hide = "Hide";
        public const string MouseScrollWheel = "Mouse ScrollWheel";
        public const string SetMaterialColorKeyword = "_Color";
        public const string Show = "Show";
        public const string Swap = "Swap";
        public const string Harmful = "Harmful";
        public const string Untagged = "Untagged";
    }
}